--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "pnpm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "deploy:gh-pages": "cross-env GITHUB_PAGES=true pnpm run build && gh-pages -d dist",
+    "deploy:surge": "pnpm run build && surge dist --domain skyshards-fusion-calculator.surge.sh",
+    "deploy:netlify": "pnpm run build && netlify deploy --prod --dir dist",
+    "deploy:vercel": "pnpm run build && vercel --prod"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
@@ -32,6 +36,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
+    "cross-env": "^7.0.3",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
