new domain stuff

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://campionnn.github.io/SkyShards/",
+  "homepage": "https://skyshards.com",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
