--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@hookform/resolvers": "^5.1.1",
     "@tailwindcss/vite": "^4.1.11",
     "@types/node": "^24.0.10",
+    "@types/pako": "^2.0.3",
     "@types/react-router-dom": "^5.3.3",
     "lucide-react": "^0.525.0",
+    "pako": "^2.1.0",
     "react": "^19.1.0",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^19.1.0",
