--- a/.github/workflows/update-fusions.yml
+++ b/.github/workflows/update-fusions.yml
@@ -15,12 +15,14 @@ jobs:
         run: |
           LATEST_RELEASE=$(curl -s https://api.github.com/repos/Campionnn/SkyShards-Parser/releases/latest | jq -r '.tag_name')
           ASSET_URL=$(curl -s https://api.github.com/repos/Campionnn/SkyShards-Parser/releases/tags/$LATEST_RELEASE | jq -r '.assets[] | select(.name == "fusion-data.json") | .browser_download_url')
-          curl -L -o fusion-data.json "$ASSET_URL"
+          curl -L -o public/fusion-data.json "$ASSET_URL"
 
       - name: Commit and push updated fusion-data.json
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add fusion-data.json
+          git add public/fusion-data.json
           git commit -m "Update fusion-data.json from SkyShards-Parser release" || echo "No changes to commit"
           git push
