--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.8.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.11",
     "zod": "^3.25.76"
