--- a/.github/workflows/update-fusions.yml
+++ b/.github/workflows/update-fusions.yml
@@ -10,8 +10,6 @@ jobs:
     steps:
       - name: Checkout target repository
         uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.PAT }}
 
       - name: Download latest fusion-data.json from source repo release
         run: |
@@ -21,8 +19,8 @@ jobs:
 
       - name: Commit and push updated fusion-data.json
         run: |
-          git config --global user.name "Campionnn"
-          git config --global user.email "campionnn@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add public/fusion-data.json
           git commit -m "Update fusion-data.json from SkyShards-Parser release" || echo "No changes to commit"
           git push
