--- a/.github/workflows/update-fusions.yml
+++ b/.github/workflows/update-fusions.yml
@@ -21,13 +21,16 @@ jobs:
       - name: Download latest fusion-data.json from source repo release
         run: |
           LATEST_RELEASE=$(curl -s https://api.github.com/repos/Campionnn/SkyShards-Parser/releases/latest | jq -r '.tag_name')
-          ASSET_URL=$(curl -s https://api.github.com/repos/Campionnn/SkyShards-Parser/releases/tags/$LATEST_RELEASE | jq -r '.assets[] | select(.name == "fusion-data.json") | .browser_download_url')
-          curl -L -o public/fusion-data.json "$ASSET_URL"
+          ASSET_URL_DATA=$(curl -s https://api.github.com/repos/Campionnn/SkyShards-Parser/releases/tags/$LATEST_RELEASE | jq -r '.assets[] | select(.name == "fusion-data.json") | .browser_download_url')
+          ASSET_URL_PROP=$(curl -s https://api.github.com/repos/Campionnn/SkyShards-Parser/releases/tags/$LATEST_RELEASE | jq -r '.assets[] | select(.name == "fusion-properties.json") | .browser_download_url')
+          curl -L -o public/fusion-data.json "$ASSET_URL_DATA"
+          curl -L -o public/fusion-properties.json "$ASSET_URL_PROP"
 
       - name: Commit and push updated fusion-data.json
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add public/fusion-data.json
-          git commit -m "Update fusion-data.json from SkyShards-Parser release" || echo "No changes to commit"
+          git add public/fusion-properties.json
+          git commit -m "Update fusion-data.json and fusion-properties.json from SkyShards-Parser release" || echo "No changes to commit"
           git push origin HEAD:${{ env.TARGET_BRANCH }}
