--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/pako": "^2.0.3",
     "@types/react-router-dom": "^5.3.3",
     "framer-motion": "^12.23.22",
+    "gif.js": "^0.2.0",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.525.0",
     "pako": "^2.1.0",
     "react": "^19.1.1",
@@ -39,6 +41,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/gif.js": "^0.2.5",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^4.7.0",
