--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/react-router-dom": "^5.3.3",
     "framer-motion": "^12.23.22",
     "gif.js": "^0.2.0",
+    "gifenc": "^1.0.3",
+    "gifuct-js": "^2.1.2",
     "html-to-image": "^1.11.13",
     "lucide-react": "^0.525.0",
     "pako": "^2.1.0",
@@ -54,7 +56,7 @@
     "terser": "^5.43.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
-    "vite": "7.1.5"
+    "vite": "7.1.11"
   },
   "packageManager": "pnpm@10.18.1"
 }
